# fuzzyfinder

./: .flake8  .gitignore  .yamllint  README.md  dev_notes.md  pyproject.toml
.github/workflows/: test.yml
fuzzyfinder/: __init__.py  comparison.py  database.py  finder.py  leven.py  record.py  utils.py
githooks/: pre-commit
tests/: test_1m.py  test_build_and_search.py  test_col_counter_delay_write.py  test_integrity.py  test_proportions.py  test_record.py  test_unique_id.py
tests/data/: fake_30000.parquet  fake_300000.parquet
